Fixing text alignment issues in content #3

--- a/css/Bootstraptweek.css
+++ b/css/Bootstraptweek.css
@@ -54,7 +54,7 @@ body{
 	position:relative; 
 	width:100%;
 	max-width:960px;
-	text-align:auto;
+	text-align:left;
 	margin:0;
 	padding:0;
 }
